this is terrible

--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
     <div class="header">
         <h1>My To-Do List</h1>
     </div>
+
     <div id="input-to-list">
-
-        <button id="add">Add</button>
-
+      <input type ="text" placeholder= "Add to your list.">
+      <button id="add">Add</button>
     </div>
+
+    <div class="list">
+      <h2 class="list-title">My List:</h2>
+      <ul id="ul">
+        <li> something </li>
+      </ul>
+    </div>
+
+
+
 </body>
 </html>
