--- a/index.html
+++ b/index.html
@@ -13,18 +13,22 @@
     </div>
 
     <div id="input-to-list">
-      <input type ="text" placeholder= "Add to your list.">
+      <input id="textbox" type ="text" placeholder= "Add to your list.">
       <button id="add">Add</button>
     </div>
 
     <div class="list">
       <h2 class="list-title">My List:</h2>
       <ul id="ul">
-        <li> something </li>
+        <li>
+          <div>
+            <span class = "priority" >!</span>
+            <span class = "item">Hello</span>
+            <span class = "completed">&#10004;</span>
+            <span class = "remove">&#10008;</span>
+          </div>
+        </li>
       </ul>
     </div>
-
-
-
 </body>
 </html>
