--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>My To-Do List</h1>
     </div>
 
-    <div id="input-to-list">
-      <input id="textbox" type ="text" placeholder= "Add to your list.">
+    <div id="input-box">
+      <input id="textBox" type ="text" placeholder= "Add to your list.">
       <button id="add">Add</button>
     </div>
 
