--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2 class="list-title">My List:</h2>
       <ul id="ul">
         <li>
-          <div>
+          <div id = "itemInList">
             <span class = "priority" >!</span>
             <span class = "item">Hello</span>
             <span class = "completed">&#10004;</span>
